--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;  
+
+  
+/*   font-family: 'Josefin Sans', sans-serif;
+font-family: 'Old Standard TT', serif;
+font-family: 'Poppins', sans-serif; */
+}
+.font{
+  font-family: 'Old Standard TT', serif;
 }
 
 code {
